# stocklens-mcp

./: .gitignore  .mcpbignore  CLAUDE.md  LICENSE  QUALITY.md  README.en.md  README.md  install.bat  install.sh  manifest.json  pyproject.toml  update.bat  update.sh  upgrade.bat  upgrade.sh
.github/workflows/: release.yml
assets/: logo_preview - 복사본.html  logo_preview.html
docs/: PROJECT_MASTER.md  SUBSCRIPTION_RESEARCH_20260412.md
guides/en/: INSTALL.md  TOOLS.md  USAGE.md
guides/ko/: INSTALL.md  TOOLS.md  USAGE.md
scripts/: configure_claude.py
stock_mcp_server/: __init__.py  _cache.py  _chart_html.py  _excel.py  _indicators.py  _metrics.py  _update_check.py  doctor.py  naver.py  server.py  setup_claude.py  yfinance_source.py
tests/: measure_token_costs.py  preview_chart.py  smoke_outputs.py  token_costs.csv
