[project]
name = "naver-stock-mcp"
version = "0.1.1"
description = "네이버 증권 데이터를 Claude에서 바로 조회할 수 있는 MCP 서버 - 한국 주식 차트, 수급, 재무지표를 자연어로 분석"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Johnhyeon" }
]
keywords = ["mcp", "claude", "stock", "naver", "korea", "finance", "investment", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: Korean",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/Johnhyeon/naver-stock-mcp"
Repository = "https://github.com/Johnhyeon/naver-stock-mcp"
Issues = "https://github.com/Johnhyeon/naver-stock-mcp/issues"

[project.scripts]
stock-mcp-server = "stock_mcp_server.server:main"
stock-mcp-setup = "stock_mcp_server.setup_claude:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stock_mcp_server"]
