[project]
name = "stocklens-mcp"
version = "0.3.2"
description = "StockLens — AI가 진짜 데이터로 분석합니다. 한국(네이버)·미국(Yahoo) 주식 + ETF MCP 서버 (차트, 수급, 재무, 실적, 배당, 스크리닝, Excel)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Johnhyeon" }
]
keywords = ["mcp", "claude", "stock", "stocklens", "naver", "korea", "finance", "investment", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: Korean",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "openpyxl>=3.1.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "yfinance>=0.2.40",
]

[project.urls]
Homepage = "https://github.com/Johnhyeon/stocklens-mcp"
Repository = "https://github.com/Johnhyeon/stocklens-mcp"
Issues = "https://github.com/Johnhyeon/stocklens-mcp/issues"

[project.scripts]
# 새 커맨드 (v0.2.0+)
stocklens = "stock_mcp_server.server:main"
stocklens-setup = "stock_mcp_server.setup_claude:main"
stocklens-doctor = "stock_mcp_server.doctor:main"
# 하위 호환 (기존 naver-stock-mcp 사용자)
stock-mcp-server = "stock_mcp_server.server:main"
stock-mcp-setup = "stock_mcp_server.setup_claude:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stock_mcp_server"]

[tool.hatch.build.targets.sdist]
# PyPI 사용자에게 불필요한 문서·GIF·아이콘 제외 (git 추적은 유지 → GitHub README 렌더링 정상)
exclude = [
    "assets/",
    "guides/",
    "QUALITY.md",
    "manifest.json",
    ".mcpbignore",
    ".github/",
    "tests/",
    "CLAUDE.md",
    "README.en.md",
]
